Modification des lien pour la nav

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <nav class="navigation">
       <ul>
         <li><a href="#accueil">Accueil</a></li>
-        <li><a href="#contact">Nous contacter</a></li>
         <li><a href="#categorie">Catégorie</a></li>
-        <li><a href="#apropos">À propos</a></li>
         <li><a href="#promotions">Promotions</a></li>
+        <li><a href="#about-us">À propos</a></li>
+        <li><a href="#contact-us">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -30,7 +30,7 @@
         <a href="" class="btn">Acheter maintenant</a>
       </div>
     </section>
-    <section class="promotions">
+    <section id="promotions">
       <h2 class="promotions-text">Nos Promotions</h2>
       <div class="promo-wrapper">
         <button class="promo-arrow prev" aria-label="Promo précedente">
@@ -64,7 +64,7 @@
       </div>
     </section>
     <!-- Ajoute ceci juste après la section promotions -->
-    <section class="about-us">
+    <section id="about-us">
       <div class="container">
         <h2>À propos de nous</h2>
         <p>
@@ -77,7 +77,7 @@
       </div>
     </section>
     <!-- Section Contact -->
-    <section class="contact-us">
+    <section id="contact-us">
       <div class="container">
         <h2>Nous contacter</h2>
         <form class="contact-form" action="#" method="post">
