--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h1 class="logo">LF-Style</h1>
     <nav class="navigation">
       <ul>
-        <li><a href="#accueil">Accueil</a></li>
+        <li><a href="index.html">Accueil</a></li>
         <li><a href="#categorie">Catégorie</a></li>
-        <li><a href="#promotions">Promotions</a></li>
+        <li><a href="promotion.html">Promotions</a></li>
         <li><a href="#about-us">À propos</a></li>
         <li><a href="#contact-us">Contact</a></li>
       </ul>
