Ajout d'une meta pour la description etc

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,25 +9,28 @@
       crossorigin="anonymous"
     ></script>
     <title>LF-STYLE</title>
+    <meta
+      name="description"
+      content="LF-Style : boutique de vêtements éthiques et tendance. Découvrez nos collections, promotions et notre univers mode responsable."
+    />
   </head>
-  <header class="header">
-    <h1 class="logo">LF-Style</h1>
-    <nav class="navigation">
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="#categorie">Catégorie</a></li>
-        <li><a href="promotion.html">Promotions</a></li>
-        <li><a href="#about-us">À propos</a></li>
-        <li><a href="#contact-us">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
   <body>
+    <header class="header">
+      <span class="logo">LF-Style</span>
+      <nav class="navigation">
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="#categorie">Catégorie</a></li>
+          <li><a href="promotion.html">Promotions</a></li>
+          <li><a href="#about-us">À propos</a></li>
+          <li><a href="#contact-us">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <section class="hero">
       <div class="hero-content">
         <h1>Nouvelle collection</h1>
-        <a href="" class="btn">Acheter maintenant</a>
+        <a href="#" class="btn">Acheter maintenant</a>
       </div>
     </section>
     <section id="promotions">
@@ -39,19 +42,19 @@
         <div class="promo-carousel">
           <div class="promo-track">
             <!-- Carte 1 -->
-            <a href="" class="promo-card">
+            <a href="#" class="promo-card">
               <img src="assets/img/produit 1.jpg" alt="Produit 1" />
               <h3>Nom du produit 1</h3>
               <p class="price">€29</p>
             </a>
             <!-- Carte 2 -->
-            <a href="" class="promo-card">
+            <a href="#" class="promo-card">
               <img src="assets/img/produit 1.jpg" alt="Produit 2" />
               <h3>Nom du produit 2</h3>
               <p class="price">€39</p>
             </a>
             <!-- Carte 3 -->
-            <a href="" class="promo-card">
+            <a href="#" class="promo-card">
               <img src="assets/img/produit 1.jpg" alt="Produit 3" />
               <h3>Nom du produit 3</h3>
               <p class="price">€49</p>
