--- a/promotion.html
+++ b/promotion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,15 +10,16 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Promotion</title>
   </head>
-  <header class="header">
-    <h1 class="logo">LF-Style</h1>
-    <nav class="navigation">
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="#categorie">Catégorie</a></li>
-        <li><a href="promotion.html">Promotions</a></li>
-      </ul>
-    </nav>
-  </header>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="logo">LF-Style</h1>
+      <nav class="navigation">
+        <ul>
+          <li><a href="index.html">Accueil</a></li>
+          <li><a href="#categorie">Catégorie</a></li>
+          <li><a href="promotion.html">Promotions</a></li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
