Ajout d'un nav toggle pour avoir un menu deroulant en version mobile

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <header class="header">
       <span class="logo">LF-Style</span>
       <nav class="navigation">
+        <button class="menu-toggle" aria-label="Ouvrir le menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="#categorie">Catégorie</a></li>
@@ -135,5 +140,6 @@
         <i class="fa-brands fa-stripe stripe-icon" aria-label="Stripe"></i>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
