--- a/promotion.html
+++ b/promotion.html
@@ -12,8 +12,13 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="logo">LF-Style</h1>
+      <span class="logo">LF-Style</span>
       <nav class="navigation">
+        <button class="menu-toggle" aria-label="Ouvrir le menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </button>
         <ul>
           <li><a href="index.html">Accueil</a></li>
           <li><a href="#categorie">Catégorie</a></li>
@@ -21,5 +26,6 @@
         </ul>
       </nav>
     </header>
+    <script src="script.js"></script>
   </body>
 </html>
