Ajout des card pour avoir des articles

--- a/promotion.html
+++ b/promotion.html
@@ -26,6 +26,105 @@
         </ul>
       </nav>
     </header>
+    <section class="page-promos">
+      <h2 class="page-promos-title">Nos Promotions</h2>
+      <div class="page-promos-wrapper">
+        <div class="page-promos-track">
+          <!-- Ligne 1 -->
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 1" />
+            <h3>Produit 1</h3>
+            <p class="price">€29</p>
+          </a>
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 2" />
+            <h3>Produit 2</h3>
+            <p class="price">€34</p>
+          </a>
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 3" />
+            <h3>Produit 3</h3>
+            <p class="price">€22</p>
+          </a>
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 4" />
+            <h3>Produit 4</h3>
+            <p class="price">€41</p>
+          </a>
+          <!-- Ligne 2 -->
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 5" />
+            <h3>Produit 5</h3>
+            <p class="price">€27</p>
+          </a>
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 6" />
+            <h3>Produit 6</h3>
+            <p class="price">€36</p>
+          </a>
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 7" />
+            <h3>Produit 7</h3>
+            <p class="price">€25</p>
+          </a>
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 8" />
+            <h3>Produit 8</h3>
+            <p class="price">€39</p>
+          </a>
+          <!-- Ligne 3 -->
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 9" />
+            <h3>Produit 9</h3>
+            <p class="price">€31</p>
+          </a>
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 10" />
+            <h3>Produit 10</h3>
+            <p class="price">€44</p>
+          </a>
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 11" />
+            <h3>Produit 11</h3>
+            <p class="price">€32</p>
+          </a>
+          <a href="#" class="page-promo-card"
+            ><img src="assets/img/produit 1.jpg" alt="Produit 12" />
+            <h3>Produit 12</h3>
+            <p class="price">€28</p>
+          </a>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-left">
+        <!-- Réseaux sociaux -->
+        <a
+          href="https://www.instagram.com/laurafaudet/"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Instagram"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://www.facebook.com/profile.php?id=100009095319764"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Facebook"
+        >
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+      </div>
+
+      <div class="footer-center">© 2025 LF Style. Tous droits réservés.</div>
+
+      <div class="footer-right">
+        <!-- Paiements sécurisés -->
+        <p>Paiements sécurisés via</p>
+        <i class="fa-brands fa-stripe stripe-icon" aria-label="Stripe"></i>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
